--- a/common/Makefile
+++ b/common/Makefile
@@ -4,7 +4,7 @@ OBJS=FileUtilities.o StringUtilities.o SystemSpecificDynamicLoading.o
 CFILES=$(OBJS:%.o=%.cpp)
 INCS=-I${BOOSTINC}
 AR=ar
-GCC=g++ -g -Wall -Werror ${INCS} -D${OSTYPE}
+GCC=g++ -g -Wall -Werror -fPIC ${INCS} -D${OSTYPE}
 
 libCommon.a: ${OBJS}
 	${AR} rcs $@ ${OBJS}
